@@ -6,7 +6,7 @@
                 <setting id="video_quality"
                         type="enum"
                         label="30101"
-                        lvalues="30102|30103"
+                        lvalues="30102|30103|30105"
                         default="0" />
 
                 <!-- Episodes per Page -->
